--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,5 +2,9 @@ CHANGELOG
 
 What’s new?
 
+4/12/13
+* Added basic math operations functionality
+* Added interactivity with choices 
+
 2/12/13
 * Started development
